--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
    
    <h1> INDICE</h1>
  <p>Utiliza el menu para navegar</p>
+ <div class="caja">
   <ul>
     <li> <a href="Parte1/index.html"> PARTE 1 </a></li>
    <li> <a href="Parte2/index.html"> PARTE 2 </a> </li>
    <li> <a href="Parte3/index.html"> PARTE 3 </a></li>
    <li> <a href="Parte4/index.html"> PARTE 4 </a></li>
-   <li></li>
+  
    
    
    </ul>
    
-   
+   </div>
     
 </body>
 </html>
