--- a/Parte4/index.html
+++ b/Parte4/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
 <p> Parte 4</p>
-<div class="padre">
-    <div class="un"> </div>
-    <div class="dos"> </div>
-    <div class="tres"> </div>
-</div>
+
+<div class="contenedor">
+ 			<div class="un"></div>
+ 			<div class="dos"></div>
+ 			<div class="tres"></div>
+ 		</div>
+ 		
+ 		
 <a href="../index.html"> Volver al indice </a>
 		
 </body>
