por fin, gracias Giu

--- a/Parte2/index.html
+++ b/Parte2/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="css/main.css">
-	<!-- Pon tu codigo aqui -->
-</head>
-<body>
-<p> Parte 2</p>
-<div class="padre">
-    <div class="un"> </div>
-    <div class="dos"> </div>
-    <div class="tres"> </div>
-</div>
-
-	<a href="../index.html"> Volver al indice </a>	
-</body>
-</html>
+ <html>
+ 	<head>
+ 		<meta charset="utf-8">
+ 		<link rel="stylesheet" type="text/css" href="css/main.css">
+ 		<title>Floating</title>
+ 	</head>
+ 	<body>
+ 	<p> Parte 2 </p>
+ 	
+ 		<div class="contenedor">
+ 		
+ 			<div class="amarillo"> </div>
+ 			<div class="azul"> </div>
+ 			<div class="pink"> </div>
+ 		</div>
+ 		
+ 		<a href="../index.html"> Volver al indice </a>
+ 		
+ 	</body>
+ </html
