--- a/Parte3/index.html
+++ b/Parte3/index.html
@@ -7,13 +7,16 @@
 	<!-- Pon tu codigo aqui -->
 </head>
 <body>
+<p> Parte 3</p>
 
-<div class="padre">
-    <div class="un"> </div>
-    <div class="dos"> </div>
-    <div class="tres"> </div>
-</div>
-
+<div class="contenedor">
+ 			<div class="un"> </div>
+ 			<div class="dos"> </div>
+ 			<div class="tres"> </div>
+ 		</div>
+ 		
+ 		
+<a href="../index.html"> Volver al indice </a>
 		
 </body>
 </html>
